Fix HTML structure and formatting issues

--- a/mainpage.html
+++ b/mainpage.html
@@ -166,13 +166,13 @@ on HTML and CSS fundamentals.
 </div>
 
 <div class="Module">
-<img src="Putoflan.jpg"  class="ModuleImage">
+<img src="CSStext.jpg"  class="ModuleImage">
 <a href="https://docs.google.com/document/d/1esoKLZFe9r0EeAO8jOXEkO3MS7UGYdktSgLHgiiqk9s/edit?usp=sharing" target="_self"><h3>Formatting Text with CSS</h3> </a>
 
 </div>
 
 <div class="Module">
-<img src="Putoflan.jpg"  class="ModuleImage">
+<img src="CSSlayout.jpg"  class="ModuleImage">
 <a href="https://docs.google.com/document/d/116pVat-DnzYaoi-0LIOHVJ8PlGoIhqR24Qade9GDv3Y/edit?usp=sharing" target="_self"><h3>Formatting Layout with CSS</h3>
 </a>
 
@@ -230,4 +230,5 @@ Phone: 09694032468
 </footer>
 
 </body>
+
 </html>
